fixed BASE64Encoder deprecation (not more needed as we use java 8 now)