@@ -1301,10 +1301,11 @@ public class NetworkUtil
         final String req = login + ":" + pass;
         final String encoded;
 
-        if (SystemUtil.getJavaVersionAsNumber() >= 8d)
-            encoded = java.util.Base64.getEncoder().encodeToString(req.getBytes());
-        else
-            encoded = new sun.misc.BASE64Encoder().encode(req.getBytes());
+        // we are now always using Java 8 at least
+        // if (SystemUtil.getJavaVersionAsNumber() >= 8d)
+        encoded = java.util.Base64.getEncoder().encodeToString(req.getBytes());
+        // else
+        // encoded = new sun.misc.BASE64Encoder().encode(req.getBytes());
 
         uc.setRequestProperty("Authorization", "Basic " + encoded);
     }
